[gd_scene load_steps=8 format=3 uid="uid://bpeefevp7dhdq"]

[ext_resource type="Script" path="res://addons/dungeon_digger/dungeon_digger_panel.gd" id="1_dn8gi"]
[ext_resource type="ButtonGroup" uid="uid://delny0b3y8ymd" path="res://addons/dungeon_digger/draw_mode.button_group.tres" id="2_k4b6o"]
[ext_resource type="Texture2D" uid="uid://b3i0gx65aw3dq" path="res://atlas.image_texture.res" id="4_gd5nm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_id5c0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_euhb0"]
bg_color = Color(0.811765, 0.811765, 0.811765, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x5h0f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oqnet"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.439216, 0.729412, 0.980392, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="DungeonDigger" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_id5c0")
script = ExtResource("1_dn8gi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PanelContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LblMode" type="Label" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
text = "Draw Mode"

[node name="BtnModeTile3D" type="Button" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_k4b6o")
text = "Tile3D"

[node name="BtnModeTile2D" type="Button" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_k4b6o")
text = "Tile2D"

[node name="BtnModePixel" type="Button" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("2_k4b6o")
text = "Pixel"

[node name="Line" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_euhb0")

[node name="BoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Color" type="HBoxContainer" parent="VBoxContainer/BoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/BoxContainer/Color"]
layout_mode = 2
size_flags_vertical = 0
text = "Draw Color"

[node name="SelectedColor" type="ColorPickerButton" parent="VBoxContainer/BoxContainer/Color"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/BoxContainer"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2

[node name="Tile2DList" type="ItemList" parent="VBoxContainer/BoxContainer/ScrollContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_x5h0f")
theme_override_styles/selected_focus = SubResource("StyleBoxFlat_oqnet")
auto_height = true
item_count = 256
max_columns = 16
same_column_width = true
fixed_icon_size = Vector2i(32, 32)
item_0/text = ""
item_0/icon = ExtResource("4_gd5nm")
item_1/text = ""
item_1/icon = ExtResource("4_gd5nm")
item_2/text = ""
item_2/icon = ExtResource("4_gd5nm")
item_3/text = ""
item_3/icon = ExtResource("4_gd5nm")
item_4/text = ""
item_4/icon = ExtResource("4_gd5nm")
item_5/text = ""
item_5/icon = ExtResource("4_gd5nm")
item_6/text = ""
item_6/icon = ExtResource("4_gd5nm")
item_7/text = ""
item_7/icon = ExtResource("4_gd5nm")
item_8/text = ""
item_8/icon = ExtResource("4_gd5nm")
item_9/text = ""
item_9/icon = ExtResource("4_gd5nm")
item_10/text = ""
item_10/icon = ExtResource("4_gd5nm")
item_11/text = ""
item_11/icon = ExtResource("4_gd5nm")
item_12/text = ""
item_12/icon = ExtResource("4_gd5nm")
item_13/text = ""
item_13/icon = ExtResource("4_gd5nm")
item_14/text = ""
item_14/icon = ExtResource("4_gd5nm")
item_15/text = ""
item_15/icon = ExtResource("4_gd5nm")
item_16/text = ""
item_16/icon = ExtResource("4_gd5nm")
item_17/text = ""
item_17/icon = ExtResource("4_gd5nm")
item_18/text = ""
item_18/icon = ExtResource("4_gd5nm")
item_19/text = ""
item_19/icon = ExtResource("4_gd5nm")
item_20/text = ""
item_20/icon = ExtResource("4_gd5nm")
item_21/text = ""
item_21/icon = ExtResource("4_gd5nm")
item_22/text = ""
item_22/icon = ExtResource("4_gd5nm")
item_23/text = ""
item_23/icon = ExtResource("4_gd5nm")
item_24/text = ""
item_24/icon = ExtResource("4_gd5nm")
item_25/text = ""
item_25/icon = ExtResource("4_gd5nm")
item_26/text = ""
item_26/icon = ExtResource("4_gd5nm")
item_27/text = ""
item_27/icon = ExtResource("4_gd5nm")
item_28/text = ""
item_28/icon = ExtResource("4_gd5nm")
item_29/text = ""
item_29/icon = ExtResource("4_gd5nm")
item_30/text = ""
item_30/icon = ExtResource("4_gd5nm")
item_31/text = ""
item_31/icon = ExtResource("4_gd5nm")
item_32/text = ""
item_32/icon = ExtResource("4_gd5nm")
item_33/text = ""
item_33/icon = ExtResource("4_gd5nm")
item_34/text = ""
item_34/icon = ExtResource("4_gd5nm")
item_35/text = ""
item_35/icon = ExtResource("4_gd5nm")
item_36/text = ""
item_36/icon = ExtResource("4_gd5nm")
item_37/text = ""
item_37/icon = ExtResource("4_gd5nm")
item_38/text = ""
item_38/icon = ExtResource("4_gd5nm")
item_39/text = ""
item_39/icon = ExtResource("4_gd5nm")
item_40/text = ""
item_40/icon = ExtResource("4_gd5nm")
item_41/text = ""
item_41/icon = ExtResource("4_gd5nm")
item_42/text = ""
item_42/icon = ExtResource("4_gd5nm")
item_43/text = ""
item_43/icon = ExtResource("4_gd5nm")
item_44/text = ""
item_44/icon = ExtResource("4_gd5nm")
item_45/text = ""
item_45/icon = ExtResource("4_gd5nm")
item_46/text = ""
item_46/icon = ExtResource("4_gd5nm")
item_47/text = ""
item_47/icon = ExtResource("4_gd5nm")
item_48/text = ""
item_48/icon = ExtResource("4_gd5nm")
item_49/text = ""
item_49/icon = ExtResource("4_gd5nm")
item_50/text = ""
item_50/icon = ExtResource("4_gd5nm")
item_51/text = ""
item_51/icon = ExtResource("4_gd5nm")
item_52/text = ""
item_52/icon = ExtResource("4_gd5nm")
item_53/text = ""
item_53/icon = ExtResource("4_gd5nm")
item_54/text = ""
item_54/icon = ExtResource("4_gd5nm")
item_55/text = ""
item_55/icon = ExtResource("4_gd5nm")
item_56/text = ""
item_56/icon = ExtResource("4_gd5nm")
item_57/text = ""
item_57/icon = ExtResource("4_gd5nm")
item_58/text = ""
item_58/icon = ExtResource("4_gd5nm")
item_59/text = ""
item_59/icon = ExtResource("4_gd5nm")
item_60/text = ""
item_60/icon = ExtResource("4_gd5nm")
item_61/text = ""
item_61/icon = ExtResource("4_gd5nm")
item_62/text = ""
item_62/icon = ExtResource("4_gd5nm")
item_63/text = ""
item_63/icon = ExtResource("4_gd5nm")
item_64/text = ""
item_64/icon = ExtResource("4_gd5nm")
item_65/text = ""
item_65/icon = ExtResource("4_gd5nm")
item_66/text = ""
item_66/icon = ExtResource("4_gd5nm")
item_67/text = ""
item_67/icon = ExtResource("4_gd5nm")
item_68/text = ""
item_68/icon = ExtResource("4_gd5nm")
item_69/text = ""
item_69/icon = ExtResource("4_gd5nm")
item_70/text = ""
item_70/icon = ExtResource("4_gd5nm")
item_71/text = ""
item_71/icon = ExtResource("4_gd5nm")
item_72/text = ""
item_72/icon = ExtResource("4_gd5nm")
item_73/text = ""
item_73/icon = ExtResource("4_gd5nm")
item_74/text = ""
item_74/icon = ExtResource("4_gd5nm")
item_75/text = ""
item_75/icon = ExtResource("4_gd5nm")
item_76/text = ""
item_76/icon = ExtResource("4_gd5nm")
item_77/text = ""
item_77/icon = ExtResource("4_gd5nm")
item_78/text = ""
item_78/icon = ExtResource("4_gd5nm")
item_79/text = ""
item_79/icon = ExtResource("4_gd5nm")
item_80/text = ""
item_80/icon = ExtResource("4_gd5nm")
item_81/text = ""
item_81/icon = ExtResource("4_gd5nm")
item_82/text = ""
item_82/icon = ExtResource("4_gd5nm")
item_83/text = ""
item_83/icon = ExtResource("4_gd5nm")
item_84/text = ""
item_84/icon = ExtResource("4_gd5nm")
item_85/text = ""
item_85/icon = ExtResource("4_gd5nm")
item_86/text = ""
item_86/icon = ExtResource("4_gd5nm")
item_87/text = ""
item_87/icon = ExtResource("4_gd5nm")
item_88/text = ""
item_88/icon = ExtResource("4_gd5nm")
item_89/text = ""
item_89/icon = ExtResource("4_gd5nm")
item_90/text = ""
item_90/icon = ExtResource("4_gd5nm")
item_91/text = ""
item_91/icon = ExtResource("4_gd5nm")
item_92/text = ""
item_92/icon = ExtResource("4_gd5nm")
item_93/text = ""
item_93/icon = ExtResource("4_gd5nm")
item_94/text = ""
item_94/icon = ExtResource("4_gd5nm")
item_95/text = ""
item_95/icon = ExtResource("4_gd5nm")
item_96/text = ""
item_96/icon = ExtResource("4_gd5nm")
item_97/text = ""
item_97/icon = ExtResource("4_gd5nm")
item_98/text = ""
item_98/icon = ExtResource("4_gd5nm")
item_99/text = ""
item_99/icon = ExtResource("4_gd5nm")
item_100/text = ""
item_100/icon = ExtResource("4_gd5nm")
item_101/text = ""
item_101/icon = ExtResource("4_gd5nm")
item_102/text = ""
item_102/icon = ExtResource("4_gd5nm")
item_103/text = ""
item_103/icon = ExtResource("4_gd5nm")
item_104/text = ""
item_104/icon = ExtResource("4_gd5nm")
item_105/text = ""
item_105/icon = ExtResource("4_gd5nm")
item_106/text = ""
item_106/icon = ExtResource("4_gd5nm")
item_107/text = ""
item_107/icon = ExtResource("4_gd5nm")
item_108/text = ""
item_108/icon = ExtResource("4_gd5nm")
item_109/text = ""
item_109/icon = ExtResource("4_gd5nm")
item_110/text = ""
item_110/icon = ExtResource("4_gd5nm")
item_111/text = ""
item_111/icon = ExtResource("4_gd5nm")
item_112/text = ""
item_112/icon = ExtResource("4_gd5nm")
item_113/text = ""
item_113/icon = ExtResource("4_gd5nm")
item_114/text = ""
item_114/icon = ExtResource("4_gd5nm")
item_115/text = ""
item_115/icon = ExtResource("4_gd5nm")
item_116/text = ""
item_116/icon = ExtResource("4_gd5nm")
item_117/text = ""
item_117/icon = ExtResource("4_gd5nm")
item_118/text = ""
item_118/icon = ExtResource("4_gd5nm")
item_119/text = ""
item_119/icon = ExtResource("4_gd5nm")
item_120/text = ""
item_120/icon = ExtResource("4_gd5nm")
item_121/text = ""
item_121/icon = ExtResource("4_gd5nm")
item_122/text = ""
item_122/icon = ExtResource("4_gd5nm")
item_123/text = ""
item_123/icon = ExtResource("4_gd5nm")
item_124/text = ""
item_124/icon = ExtResource("4_gd5nm")
item_125/text = ""
item_125/icon = ExtResource("4_gd5nm")
item_126/text = ""
item_126/icon = ExtResource("4_gd5nm")
item_127/text = ""
item_127/icon = ExtResource("4_gd5nm")
item_128/text = ""
item_128/icon = ExtResource("4_gd5nm")
item_129/text = ""
item_129/icon = ExtResource("4_gd5nm")
item_130/text = ""
item_130/icon = ExtResource("4_gd5nm")
item_131/text = ""
item_131/icon = ExtResource("4_gd5nm")
item_132/text = ""
item_132/icon = ExtResource("4_gd5nm")
item_133/text = ""
item_133/icon = ExtResource("4_gd5nm")
item_134/text = ""
item_134/icon = ExtResource("4_gd5nm")
item_135/text = ""
item_135/icon = ExtResource("4_gd5nm")
item_136/text = ""
item_136/icon = ExtResource("4_gd5nm")
item_137/text = ""
item_137/icon = ExtResource("4_gd5nm")
item_138/text = ""
item_138/icon = ExtResource("4_gd5nm")
item_139/text = ""
item_139/icon = ExtResource("4_gd5nm")
item_140/text = ""
item_140/icon = ExtResource("4_gd5nm")
item_141/text = ""
item_141/icon = ExtResource("4_gd5nm")
item_142/text = ""
item_142/icon = ExtResource("4_gd5nm")
item_143/text = ""
item_143/icon = ExtResource("4_gd5nm")
item_144/text = ""
item_144/icon = ExtResource("4_gd5nm")
item_145/text = ""
item_145/icon = ExtResource("4_gd5nm")
item_146/text = ""
item_146/icon = ExtResource("4_gd5nm")
item_147/text = ""
item_147/icon = ExtResource("4_gd5nm")
item_148/text = ""
item_148/icon = ExtResource("4_gd5nm")
item_149/text = ""
item_149/icon = ExtResource("4_gd5nm")
item_150/text = ""
item_150/icon = ExtResource("4_gd5nm")
item_151/text = ""
item_151/icon = ExtResource("4_gd5nm")
item_152/text = ""
item_152/icon = ExtResource("4_gd5nm")
item_153/text = ""
item_153/icon = ExtResource("4_gd5nm")
item_154/text = ""
item_154/icon = ExtResource("4_gd5nm")
item_155/text = ""
item_155/icon = ExtResource("4_gd5nm")
item_156/text = ""
item_156/icon = ExtResource("4_gd5nm")
item_157/text = ""
item_157/icon = ExtResource("4_gd5nm")
item_158/text = ""
item_158/icon = ExtResource("4_gd5nm")
item_159/text = ""
item_159/icon = ExtResource("4_gd5nm")
item_160/text = ""
item_160/icon = ExtResource("4_gd5nm")
item_161/text = ""
item_161/icon = ExtResource("4_gd5nm")
item_162/text = ""
item_162/icon = ExtResource("4_gd5nm")
item_163/text = ""
item_163/icon = ExtResource("4_gd5nm")
item_164/text = ""
item_164/icon = ExtResource("4_gd5nm")
item_165/text = ""
item_165/icon = ExtResource("4_gd5nm")
item_166/text = ""
item_166/icon = ExtResource("4_gd5nm")
item_167/text = ""
item_167/icon = ExtResource("4_gd5nm")
item_168/text = ""
item_168/icon = ExtResource("4_gd5nm")
item_169/text = ""
item_169/icon = ExtResource("4_gd5nm")
item_170/text = ""
item_170/icon = ExtResource("4_gd5nm")
item_171/text = ""
item_171/icon = ExtResource("4_gd5nm")
item_172/text = ""
item_172/icon = ExtResource("4_gd5nm")
item_173/text = ""
item_173/icon = ExtResource("4_gd5nm")
item_174/text = ""
item_174/icon = ExtResource("4_gd5nm")
item_175/text = ""
item_175/icon = ExtResource("4_gd5nm")
item_176/text = ""
item_176/icon = ExtResource("4_gd5nm")
item_177/text = ""
item_177/icon = ExtResource("4_gd5nm")
item_178/text = ""
item_178/icon = ExtResource("4_gd5nm")
item_179/text = ""
item_179/icon = ExtResource("4_gd5nm")
item_180/text = ""
item_180/icon = ExtResource("4_gd5nm")
item_181/text = ""
item_181/icon = ExtResource("4_gd5nm")
item_182/text = ""
item_182/icon = ExtResource("4_gd5nm")
item_183/text = ""
item_183/icon = ExtResource("4_gd5nm")
item_184/text = ""
item_184/icon = ExtResource("4_gd5nm")
item_185/text = ""
item_185/icon = ExtResource("4_gd5nm")
item_186/text = ""
item_186/icon = ExtResource("4_gd5nm")
item_187/text = ""
item_187/icon = ExtResource("4_gd5nm")
item_188/text = ""
item_188/icon = ExtResource("4_gd5nm")
item_189/text = ""
item_189/icon = ExtResource("4_gd5nm")
item_190/text = ""
item_190/icon = ExtResource("4_gd5nm")
item_191/text = ""
item_191/icon = ExtResource("4_gd5nm")
item_192/text = ""
item_192/icon = ExtResource("4_gd5nm")
item_193/text = ""
item_193/icon = ExtResource("4_gd5nm")
item_194/text = ""
item_194/icon = ExtResource("4_gd5nm")
item_195/text = ""
item_195/icon = ExtResource("4_gd5nm")
item_196/text = ""
item_196/icon = ExtResource("4_gd5nm")
item_197/text = ""
item_197/icon = ExtResource("4_gd5nm")
item_198/text = ""
item_198/icon = ExtResource("4_gd5nm")
item_199/text = ""
item_199/icon = ExtResource("4_gd5nm")
item_200/text = ""
item_200/icon = ExtResource("4_gd5nm")
item_201/text = ""
item_201/icon = ExtResource("4_gd5nm")
item_202/text = ""
item_202/icon = ExtResource("4_gd5nm")
item_203/text = ""
item_203/icon = ExtResource("4_gd5nm")
item_204/text = ""
item_204/icon = ExtResource("4_gd5nm")
item_205/text = ""
item_205/icon = ExtResource("4_gd5nm")
item_206/text = ""
item_206/icon = ExtResource("4_gd5nm")
item_207/text = ""
item_207/icon = ExtResource("4_gd5nm")
item_208/text = ""
item_208/icon = ExtResource("4_gd5nm")
item_209/text = ""
item_209/icon = ExtResource("4_gd5nm")
item_210/text = ""
item_210/icon = ExtResource("4_gd5nm")
item_211/text = ""
item_211/icon = ExtResource("4_gd5nm")
item_212/text = ""
item_212/icon = ExtResource("4_gd5nm")
item_213/text = ""
item_213/icon = ExtResource("4_gd5nm")
item_214/text = ""
item_214/icon = ExtResource("4_gd5nm")
item_215/text = ""
item_215/icon = ExtResource("4_gd5nm")
item_216/text = ""
item_216/icon = ExtResource("4_gd5nm")
item_217/text = ""
item_217/icon = ExtResource("4_gd5nm")
item_218/text = ""
item_218/icon = ExtResource("4_gd5nm")
item_219/text = ""
item_219/icon = ExtResource("4_gd5nm")
item_220/text = ""
item_220/icon = ExtResource("4_gd5nm")
item_221/text = ""
item_221/icon = ExtResource("4_gd5nm")
item_222/text = ""
item_222/icon = ExtResource("4_gd5nm")
item_223/text = ""
item_223/icon = ExtResource("4_gd5nm")
item_224/text = ""
item_224/icon = ExtResource("4_gd5nm")
item_225/text = ""
item_225/icon = ExtResource("4_gd5nm")
item_226/text = ""
item_226/icon = ExtResource("4_gd5nm")
item_227/text = ""
item_227/icon = ExtResource("4_gd5nm")
item_228/text = ""
item_228/icon = ExtResource("4_gd5nm")
item_229/text = ""
item_229/icon = ExtResource("4_gd5nm")
item_230/text = ""
item_230/icon = ExtResource("4_gd5nm")
item_231/text = ""
item_231/icon = ExtResource("4_gd5nm")
item_232/text = ""
item_232/icon = ExtResource("4_gd5nm")
item_233/text = ""
item_233/icon = ExtResource("4_gd5nm")
item_234/text = ""
item_234/icon = ExtResource("4_gd5nm")
item_235/text = ""
item_235/icon = ExtResource("4_gd5nm")
item_236/text = ""
item_236/icon = ExtResource("4_gd5nm")
item_237/text = ""
item_237/icon = ExtResource("4_gd5nm")
item_238/text = ""
item_238/icon = ExtResource("4_gd5nm")
item_239/text = ""
item_239/icon = ExtResource("4_gd5nm")
item_240/text = ""
item_240/icon = ExtResource("4_gd5nm")
item_241/text = ""
item_241/icon = ExtResource("4_gd5nm")
item_242/text = ""
item_242/icon = ExtResource("4_gd5nm")
item_243/text = ""
item_243/icon = ExtResource("4_gd5nm")
item_244/text = ""
item_244/icon = ExtResource("4_gd5nm")
item_245/text = ""
item_245/icon = ExtResource("4_gd5nm")
item_246/text = ""
item_246/icon = ExtResource("4_gd5nm")
item_247/text = ""
item_247/icon = ExtResource("4_gd5nm")
item_248/text = ""
item_248/icon = ExtResource("4_gd5nm")
item_249/text = ""
item_249/icon = ExtResource("4_gd5nm")
item_250/text = ""
item_250/icon = ExtResource("4_gd5nm")
item_251/text = ""
item_251/icon = ExtResource("4_gd5nm")
item_252/text = ""
item_252/icon = ExtResource("4_gd5nm")
item_253/text = ""
item_253/icon = ExtResource("4_gd5nm")
item_254/text = ""
item_254/icon = ExtResource("4_gd5nm")
item_255/text = ""
item_255/icon = ExtResource("4_gd5nm")

[connection signal="pressed" from="VBoxContainer/PanelContainer/BtnModeTile3D" to="." method="_on_btn_mode_tile_3d_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/BtnModeTile2D" to="." method="_on_btn_mode_tile_2d_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/BtnModePixel" to="." method="_on_btn_mode_pixel_pressed"]
[connection signal="color_changed" from="VBoxContainer/BoxContainer/Color/SelectedColor" to="." method="_on_draw_color_color_changed"]
